[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "indigopy"
authors = [{name = "Carolina Chung", email = "chechung@umich.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependecies = [
	"sphinx >=5.3", 
	"sphinx-rtd-theme >=1.0", 
	"numpy >=1.23", 
	"pandas >=1.5", 
]

[project.urls]
Home = "https://github.com/sriram-lab/INDIGOpy"
