[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indigopy-sriram-lab"
version = "0.1.0"
authors = [
  { name="Chandrasekaran Lab", email="csriram@umich.edu" },
]
description = "The Python implementation of INDIGO"
readme = "README.md"
# license = "GNU GPL"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/sriram-lab/INDIGOpy"
"Lab website" = "https://systemsbiologylab.org"
